# XCSP-Launcher

./: .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish-binaries.yml  publish-pypi.yaml  python-tests.yml  release.yml  tests.yml
.packaging/: update_metadata.py
.packaging/chocolatey/: chocolateyInstall.ps1  xcsp-launcher.nuspec.template
.packaging/homebrew/: xcsp.rb.template
.packaging/scripts/: postinst
.packaging/snap/: snapcraft.yaml
.packaging/snap/local/: snapcraft.yaml.template
Formula/: xcsp.rb
chocolatey/: package.nuspec  xcsp-launcher.nuspec  xcsp-launcher.nuspec.template
docs/: api.md  cli.md  conf.py  general.md  index.md  install_solver.md  library.md  overview.md  requirements.txt  solver.md  solver_building.md  solver_configuration.md  solving.md
docs/media/cast/: basic_usage.cast  basic_usage_with_specific_version.cast  limit_solution.cast
snap/: snapcraft.yaml  snapcraft.yaml.template
snap/hooks/: install
tests/: README.md
tests/installation/org-picat/: bin_dir.tree  source_dir.tree
tests/xcsp3/cop/SAT/: solutions.json
xcsp/: __init__.py
xcsp/builder/: build.py
xcsp/commands/: install.py  solver.py
xcsp/solver/: resolver.py  solver.py
xcsp/utils/: log.py  paths.py  placeholder.py  system.py
