[build-system]
requires = ["setuptools>=67", "wheel", "pyinstaller", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "xcsp"
version = "0.1.0"
description = "A unified launcher for XCSP solver"
readme = "README.md"
requires-python = ">=3.8"
license = "LGPL-3.0-or-later" # see https://spdx.org/licenses/
authors = [
    { name = "Thibault Falque", email = "contact@tootatis.dev" },
    { name = "Romain Wallon", email = "contact@tootatis.dev" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
keywords = ["XCSP", "solver", "constraint-programming", "launcher"]

dependencies = [
    "loguru",
    "tqdm",
    "platformdirs",
    "pyfiglet",
    "GitPython",
    "PyYAML"
]

[project.urls]
"Homepage" = "https://github.com/crillab/xcsplauncher"
"Source" = "https://github.com/crillab/xcsplauncher"

[project.optional-dependencies]
test = [
    "pytest"
]
docs = [
    "sphinx>=5.3.0",
    "sphinx_rtd_theme>=2.0.0",
    "myst_parser",
    "sphinx-automodapi",
    "readthedocs-sphinx-search>=0.3.2",
]

[tool.setuptools.packages.find]
where = ["xcsp"]

[tool.setuptools.package-data]
"xcsp" = ["*.yaml", "*.xsc.yaml"]

